enable flask reload code on change

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -8,4 +8,4 @@ services:
       - ./src:/app
     ports:
       - '5000:5000'
-    command: flask run --host=0.0.0.0
+    command: flask run --host=0.0.0.0 --reload
