--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,13 @@ services:
     build: .
     environment:
       - GUNICORN_CMD_ARGS
+      - POSTGRES_PASSWORD
+      - POSTGRES_USER
     networks:
       - internal
+    depends_on:
+      - db
+      - redis
   redis:
     image: redis:6-alpine
     networks:
@@ -18,7 +23,10 @@ services:
       - POSTGRES_DB
       - PGDATA=/var/lib/postgresql/data
     volumes:
-      - moviesauth_db:/var/lib/postgresql/data    
+      - moviesauth_db:/var/lib/postgresql/data
+
+    networks:
+      - internal
 
 networks:
   internal:
