--- a/tests/functional/docker-compose.yaml
+++ b/tests/functional/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - GUNICORN_CMD_ARGS
       - POSTGRES_PASSWORD
       - POSTGRES_USER
+      - POSTGRES_DB
     depends_on:
       - db
       - redis
